--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>in.RAHAM</groupId>
-    <artifactId>NETFLIX-RAKSHITHA</artifactId>
+    <artifactId>NETFLIX-RAKSHITHA H L</artifactId>
     <packaging>war</packaging>
     <version>1.2.2</version>
     <name>Java Home myweb</name>
